@@ -1,3 +1,8 @@
+2007-10-02  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/utils.h:
+	More stringify() functions
+
 2007-09-24  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-main-menu.cc:
